--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
   <head>
     <title>Sample App</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
   </head>
   <body>
-    <div id='root'>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="root"></div>
+      </div>
     </div>
+
+  </div>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
