--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Sample App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>-->
+    <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css"/>
   </head>
   <body>
         <div id="root"></div>
