--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
   <head>
     <title>Sample App</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"/>
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"/>-->
     <!--<link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css"/>-->
+    <style>
+      .panel-default {
+        border-color: #ccc;
+      }
+      .list-group-item {
+        border-color: #ccc;
+      }
+      .search-item:hover {
+        background-color: #f8f8f8;
+      }
+      .form-control {
+        box-shadow: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
